comment session not showing resolved

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -360,7 +360,6 @@ body {
 
 #comments{
   margin-left:25%;
-  height:1rem;
 }
 
 
